# postr_backend

./: .gitignore  Cargo.toml
migrations/: 20221028120353_posts.down.sql  20221028120353_posts.up.sql  20221101173610_users.up.sql  20221101173907_user_post_relation.down.sql  20221101173907_user_post_relation.up.sql  20221107165601_posts_history.down.sql  20221107165601_posts_history.up.sql  20221107185545_likes.down.sql  20221107185545_likes.up.sql  20221107191028_follows.down.sql  20221107191028_follows.up.sql
src/: config.rs  lib.rs  main.rs
src/http/: error.rs  feed.rs  mod.rs  posts.rs  users.rs
src/http/actions/: follow.rs  like.rs  mod.rs
src/utils/: jwt.rs  mod.rs
