[package]
name = "postr_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.5.17", features = ["headers"] }
axum-macros = "0.2.3"
chrono = { version = "0.4.22", features = ["serde"] }
dotenvy = "0.15.6"
hmac = "0.12.1"
jsonwebtoken = "8.1.1"
lazy_static = "1.4.0"
pbkdf2 = "0.11.0"
serde = { version = "1.0.147", features = ["derive"] }
sha2 = "0.10.6"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
thiserror = "1.0.37"
time = "0.3.16"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["add-extension", "cors"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
http = "0.2.8"
